<resources>
    <string name="app_name">OneBancAssign</string>

    <string name="chole_bhature">Chole Bhature</string>
    <string name="rajma_chawal">Rajma Chawal</string>
    <string name="prantha">Prantha</string>
    <string name="north_indian">North Indian</string>
    <string name="panner_momos">Panner Momos</string>
    <string name="tandoori_pizza">Tandoori Pizza</string>
    <string name="masala_fries">Masala Fries</string>
    <string name="top_dishes">Top Dishes</string>
    <string name="chinese">Chinese</string>
    <string name="mexican">Mexican</string>
    <string name="south_indian">South Indian</string>
    <string name="italian">Italian</string>
    <string name="chole_puri">Chole Puri</string>
    <string name="aaloo_gobi">Aaloo Gobi</string>
    <string name="daal_makhni">Daal Makhni</string>
    <string name="choose_cuisine">Cuisines to choose from</string>
    <string name="our_top_dishes">Our top Dishes</string>
    <string name="cart">Cart</string>
    <string name="select_payment">Select Payment Method</string>
    <string name="select_address">Select Delivery Address</string>
    <string name="total_amount">Total Amount of the dishes:</string>
    <string name="cgst">CGST (2.5%)</string>
    <string name="gst_2_5">GST (2.5%)</string>
    <string name="grand_total">Grand Total:</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="check_out">Check Out</string>
    <string name="money">money</string>
    <string name="add">Add</string>
    <string name="rs_f">₹ %.2f</string>
    <string name="rs_d">₹ %d</string>
    <string name="x_d">x %d</string>
    <string name="language">language</string>
    <string name="_0">0</string>
    <string name="veg_icon">vegIcon</string>
    <string name="fried_bat">Fried Bat</string>
    <string name="steamed_bat">Steamed Bat</string>
    <string name="bat_soup">Bat soup</string>
    <string name="dumpling">Dumpling</string>
    <string name="bat">Bat</string>
    <string name="bat_manchurian">Bat Manchurian</string>
    <string name="pizza">Pizza</string>
    <string name="pasta">Pasta</string>
    <string name="lasagna">Lasagna</string>
    <string name="speghati">Speghati</string>
    <string name="calzone">Calzone</string>
    <string name="garlic_bread">Garlic Bread</string>
    <string name="taco">Taco</string>
    <string name="black_beans">Black Beans</string>
    <string name="nachos">Nachos</string>
    <string name="cheese_nachos">Cheese Nachos</string>
    <string name="tandoori_nachos">Tandoori Nachos</string>
    <string name="mexican_lava_burger">Mexican Lava Burger</string>
    <string name="dosa">Dosa</string>
    <string name="idli">Idli</string>
    <string name="wada">Wada</string>
    <string name="sambhar">Sambhar</string>
    <string name="uttpam">Uttpam</string>
    <string name="upma">Upma</string>
</resources>