<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.Home">

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_cuisine_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_tamma"
        android:gravity="center"
        android:text="@string/choose_cuisine"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/home_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_cuisines_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/home_cuisine_text" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/home_cuisines_view_pager"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintTop_toBottomOf="@id/home_cuisine_text" />


    <LinearLayout
        android:id="@+id/home_top_dishes_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@id/home_cuisines_view_pager">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/thumbsup" />

        <TextView
            android:id="@+id/home_top_dishes_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="@font/baloo_tamma"
            android:gravity="start|center"
            android:text="@string/our_top_dishes"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_top_3_dishes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_top_dishes_text_layout"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_language_changer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:contentDescription="@string/language"
        android:focusable="true"
        android:foregroundGravity="bottom|right"
        android:src="@drawable/ic_baseline_translate_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".95" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:contentDescription="@string/cart"
        android:focusable="true"
        android:foregroundGravity="bottom|right"
        android:src="@drawable/cart_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".83" />


</androidx.constraintlayout.widget.ConstraintLayout>
